# agent_ecology3

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
config/: config.yaml
docs/: ACCOUNTING_CONSTANTS.md  IMPLEMENTATION_BASELINE.md  REMOVAL_01_RUNTIME_GOVERNANCE.md  REMOVAL_02_COMPAT_SHIMS_DISPATCH.md  REMOVAL_03_BOUNDARY_MERGE.md  REMOVAL_04_DASHBOARD_SPRAWL.md  REMOVAL_05_DORMANT_BOOT_SUBSYSTEMS.md  REMOVAL_06_BACKWARD_CONFIG_COMPAT.md  REMOVAL_SEQUENCE.md  RESOURCE_ACCOUNTING.md  REWRITE_SCOPE.md
src/agent_ecology3/: __init__.py  __main__.py  cli.py  config.py
src/agent_ecology3/analysis/: __init__.py  emergence_report.py
src/agent_ecology3/dashboard/: __init__.py  server.py
src/agent_ecology3/simulation/: __init__.py  runner.py
src/agent_ecology3/world/: __init__.py  action_executor.py  actions.py  artifacts.py  contracts.py  delegation.py  executor.py  ledger.py  logger.py  mint.py  queries.py  rates.py  world.py
tests/: test_config_and_actions.py  test_runtime_smoke.py
